--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
       <div class="content">
         <h1>Criar nova conta</h1>
         <div class="card">
-          <form class="cadastro">
+          <form class="formCadastro">
             <input type="text" placeholder="Nome" name="name" id="name" />
             <input
               type="text"
