--- a/cadastro.html
+++ b/cadastro.html
@@ -34,9 +34,7 @@
               id="password"
             />
             <div class="buttons">
-              <button onclick="window.location.href = 'index.html'">
-                voltar
-              </button>
+              <button type="reset"><a href="index.html">voltar</a></button>
               <button type="submit" class="submitCadastrar">cadastrar</button>
             </div>
           </form>
