--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
               id="senha"
             />
             <div class="buttons">
-              <button onclick="window.location.href = 'cadastro.html'">
-                cadastrar
+              <button type="reset">
+                <a href="cadastro.html">cadastrar</a>
               </button>
               <button type="submit">entrar</button>
             </div>
